--- a/Jokes/support/Base.lproj/LaunchScreen.storyboard
+++ b/Jokes/support/Base.lproj/LaunchScreen.storyboard
@@ -18,11 +18,11 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Infinity meme" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XcF-J6-RBH">
                                 <rect key="frame" x="84" y="422" width="246.5" height="52"/>
                                 <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="38"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="highlightedColor" cocoaTouchSystemColor="darkTextColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <color key="backgroundColor" red="0.8784313725490196" green="0.8784313725490196" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="XcF-J6-RBH" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="mmc-Nx-Jde"/>
                             <constraint firstItem="XcF-J6-RBH" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="pEZ-CK-G51"/>
